--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,23 @@
-<h2>Hello World</h2>
-<p>
-  The time is now: <%= Time.now %>
-  <%= @environment_variable_test %>
-</p>
+<div class="container">   
+  <% flash.each do |type, msg| %>
+    <div class="alert alert-info">
+      <%= msg %>
+    </div>
+  <% end %>
+
+  <h2>Tweet as @BernieCounter!</h2>
+
+  <%= form_tag tweets_path do %>
+    <div class="form-group">
+      <label for="tweet">Tweet:</label>
+      <%= text_field_tag 'tweet', nil, placeholder: 'Enter Message Here...', maxlength: 280, size: 280, required: 'true', class: 'form-control' %>
+    </div>
+    <%= submit_tag 'Send Tweet', class: 'btn btn-default' %>
+  <% end %>
+
+</div>
+<footer class="page-footer font-small blue">
+  <div class="footer-copyright text-center py-3"> By Diane Douglas
+    <%= link_to 'www.melodiccode.com', 'http://www.melodiccode.com' %>
+  </div>
+</footer>
